[gd_scene load_steps=2 format=3 uid="uid://qarunner"]

[ext_resource type="Script" path="res://scripts/QARunner.gd" id="1"]

[node name="QARunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "QA Runner"
theme_type_variation = &"HeaderSmall"

[node name="Status" type="Label" parent="VBox"]
layout_mode = 2
text = "Status..."

[node name="Log" type="TextEdit" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
readonly = true
wrap_mode = 1

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RunButton" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "Run QA"

[node name="SaveButton" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "Save Report"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "Back"
